# aegisx

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 0001_phase1_foundation.py
apps/api/src/aegisx/: __init__.py  api.py  auth.py  config.py  database.py  models.py  observability.py
apps/api/src/aegisx/security/: __init__.py  audit.py  context.py  passwords.py  policy.py  tokens.py
apps/api/tests/: test_auth_api.py  test_foundation_api.py  test_models.py
apps/web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.tsx  main.tsx  styles.css
docs/: agent-responsibilities.md  canonical-event-schema.md  data-flow.md  detection-engine-design.md  domain-model.md  observability-design.md  phase-1-plan.md  product-requirements.md  risk-register.md  roadmap.md  storage-strategy.md  system-architecture.md  testing-strategy.md
docs/adr/: 0001-modular-monolith-monorepo.md  0002-organization-workspace-tenancy.md  0003-first-party-authentication.md  0004-postgresql-and-redis.md  0005-defer-data-pipeline-to-phase-2.md
docs/operations/: troubleshooting.md
docs/security/: authorization-model.md  tenant-isolation.md  threat-model.md
scripts/: dev.ps1
tests/security/: conftest.py  test_security_foundation.py
