[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "aegisx"
version = "0.1.0"
description = "Tenant-isolated security operations platform"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic==1.16.4",
  "fastapi==0.139.2",
  "psycopg[binary]==3.2.9",
  "pydantic-settings==2.10.1",
  "redis==6.2.0",
  "sqlalchemy==2.0.41",
  "starlette==1.3.1",
  "structlog==25.4.0",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "bandit==1.8.6",
  "build==1.2.2.post1",
  "hatchling==1.27.0",
  "httpx==0.28.1",
  "mypy==1.17.0",
  "pip-audit==2.9.0",
  "pre-commit==4.2.0",
  "pytest==9.1.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.4",
]

[tool.hatch.build.targets.wheel]
packages = ["apps/api/src/aegisx"]

[tool.hatch.build.targets.sdist]
include = ["apps/api/src/aegisx", "pyproject.toml", "README.md"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --basetemp=.tmp/pytest --cov=aegisx --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests", "apps/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"apps/api/tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["tests", "apps/api/tests"]
skips = ["B101"]
